--- a/HTML/HTMLAssaignments/Image.html
+++ b/HTML/HTMLAssaignments/Image.html
@@ -32,23 +32,32 @@
             <tr>
                 <td>
                         <p><h4>
-                                What is life without a bit of fun? <br> you choose to make every quote and thought<br> for the day a serious one,<br> you run the real risk of boring your<br> child with all the seriousness. <br> funny quotes for kids are necessary,<br> in order to maintain the fine balance required,<br> but they also have to reflect a moral <br>underneath that gets them thinking.</h4>
+                                The cat is loving pet which <br>
+                                gets familiar with a person<br>
+                                after interaction of some minutes.<br>
+                                Playful is one of the <br>
+                                characteristics of the cat <br>
+                                which makes humans love them most.                                
                             </p>
                 </td>
                 <td>
                         <p><h4>
-                                Lorem ipsum dolor sit amet,<br>
-                                consectetur adipisicing elit. <br>
-                                Labore libero quod impedit <br>
-                                ipsum tempore alias!</h4>
+                                Cats are independent in their life.<br>
+                                They do not take support or help of<br>
+                                others to achieve their targets.<br>
+                                People should be like cats to<br>
+                                prepare themselves enough confident<br>
+                                to handle things on their own. 
                             </p>
                     </td>
                     <td>
                             <p><h4>
-                                    Lorem ipsum dolor sit amet,<br>
-                                    consectetur adipisicing elit. <br>
-                                    Labore libero quod impedit <br>
-                                    ipsum tempore alias!</h4>
+                                When a cat falls from anywhere<br>
+                                it lands on its legs only. This<br>
+                                is a very important feature which<br>
+                                teaches us that even though we fail<br>
+                                we should be able to take stand<br>
+                                 in life and never give up.
                                 </p>
                         </td>
             </tr>
@@ -66,26 +75,32 @@
             <tr>
                     <td>
                             <p><h4>
-                                    Lorem ipsum dolor sit amet,<br>
-                                    consectetur adipisicing elit. <br>
-                                    Labore libero quod impedit <br>
-                                    ipsum tempore alias!</h4>
+                                The cat is loving pet which <br>
+                                gets familiar with a person<br>
+                                after interaction of some minutes.<br>
+                                Playful is one of the <br>
+                                characteristics of the cat <br>
+                                which makes humans love them most.  
                                 </p>
                     </td>
                     <td>
                             <p><h4>
-                                Lorem ipsum dolor sit amet,<br>
-                                consectetur adipisicing elit. <br>
-                                Labore libero quod impedit <br>
-                                ipsum tempore alias!</h4>
+                                Cats are independent in their life.<br>
+                                They do not take support or help of<br>
+                                others to achieve their targets.<br>
+                                People should be like cats to<br>
+                                prepare themselves enough confident<br>
+                                to handle things on their own. 
                             </p>
                         </td>
                         <td>
                                 <p><h4>
-                                        Lorem ipsum dolor sit amet,<br>
-                                        consectetur adipisicing elit. <br>
-                                        Labore libero quod impedit <br>
-                                        ipsum tempore alias!</h4>
+                                        When a cat falls from anywhere<br>
+                                        it lands on its legs only. This<br>
+                                        is a very important feature which<br>
+                                        teaches us that even though we fail<br>
+                                        we should be able to take stand<br>
+                                         in life and never give up.
                                     </p>
                             </td>
                 </tr>
@@ -95,10 +110,12 @@
             <tr  bgcolor="beige">
                     <td>
                             <p><h4>
-                                    Lorem ipsum dolor sit amet,<br>
-                                    consectetur adipisicing elit. <br>
-                                    Labore libero quod impedit <br>
-                                    ipsum tempore alias!</h4>
+                                        The cat is loving pet which <br>
+                                        gets familiar with a person<br>
+                                        after interaction of some minutes.<br>
+                                        Playful is one of the <br>
+                                        characteristics of the cat <br>
+                                        which makes humans love them most.  
                                 </p>
                         </td>
                         <th class="col">
@@ -107,10 +124,13 @@
             </tr>
             <tr bgcolor="beige">
                     <td>
-                            <p><h4> Lorem ipsum dolor sit amet,<br>
-                                    consectetur adipisicing elit. <br>
-                                    Labore libero quod impedit <br>
-                                    ipsum tempore alias!</h4>
+                            <p><h4> 
+                                        Cats are independent in their life.<br>
+                                        They do not take support or help of<br>
+                                        others to achieve their targets.<br>
+                                        People should be like cats to<br>
+                                        prepare themselves enough confident<br>
+                                        to handle things on their own. 
                                 </p>
                         </td>
                         <th class="col">
@@ -120,10 +140,12 @@
             <tr bgcolor="beige">
                     <td>
                             <p><h4>
-                                    Lorem ipsum dolor sit amet,<br>
-                                    consectetur adipisicing elit. <br>
-                                    Labore libero quod impedit <br>
-                                    ipsum tempore alias!</h4>
+                                When a cat falls from anywhere<br>
+                                it lands on its legs only. This<br>
+                                is a very important feature which<br>
+                                teaches us that even though we fail<br>
+                                we should be able to take stand<br>
+                                 in life and never give up.
                                 </p>
                         </td>
                         <th class="col">
@@ -133,10 +155,12 @@
             <tr bgcolor="beige">
                     <td>
                             <p><h4>
-                                    Lorem ipsum dolor sit amet,<br>
-                                    consectetur adipisicing elit. <br>
-                                    Labore libero quod impedit <br>
-                                    ipsum tempore alias!</h4>
+                                        The cat is loving pet which <br>
+                                        gets familiar with a person<br>
+                                        after interaction of some minutes.<br>
+                                        Playful is one of the <br>
+                                        characteristics of the cat <br>
+                                        which makes humans love them most.  
                                 </p>
                         </td>
                         <th class="col">
@@ -146,10 +170,12 @@
             <tr bgcolor="beige">
                     <td>
                             <p><h4>
-                                    Lorem ipsum dolor sit amet,<br>
-                                    consectetur adipisicing elit. <br>
-                                    Labore libero quod impedit <br>
-                                    ipsum tempore alias!</h4>
+                                        Cats are independent in their life.<br>
+                                        They do not take support or help of<br>
+                                        others to achieve their targets.<br>
+                                        People should be like cats to<br>
+                                        prepare themselves enough confident<br>
+                                        to handle things on their own. 
                                 </p>
                         </td>
                         <th class="col">
