--- a/myservletapp/src/main/webapp/Index.html
+++ b/myservletapp/src/main/webapp/Index.html
@@ -5,11 +5,17 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>
-Current Date and Time :
-<span color="pink">july 2019 09 05:39 PM IST
-</span>
-</h1>
+	<h1>
+		Current Date and Time :<br> <span color="pink">july 2019
+			09 05:39 PM IST </span><br> 
+	<!-- 	<a href="http://Myservletapp-env.jcfwtjjmig.ap-south-1.elasticbeanstalk.com/currentDate">Click here</a><br>
+		<a href="http://Myservletapp-env.jcfwtjjmig.ap-south-1.elasticbeanstalk.com/form.html">Click here</a><br>
+		<a href="http://Myservletapp-env.jcfwtjjmig.ap-south-1.elasticbeanstalk.com/employeeinfo.html">Clickhere</a> -->
+			
+			<a href="./currentDate">Click here</a><br>
+			<a href="./form.html">Click here</a><br>
+			<a href="./employeeinfo.html">Clickhere</a> 
+	</h1>
 
 </body>
 </html>
